--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projeto_crud",
+  "name": "projeto-crud",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "mongoose": "^6.3.3"
+    "bcrypt": "^5.0.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15"
   }
 }
